	The EXTENDED_COLOR_SPECS compile option is relevant only to one
	terminal (vgagl).  Make the corresponding toggle a terminal-specific
	flag rather than a global variable.  Clean up terminal flags.

	* src/axis.c src/axis.h src/mouse.c src/plot2d.c src/util.c:
	Allow zooming of plots that originally had an explicit range in the
	plot command.

	* src/set.c (set_label):  Simplify label parsing.

2012-09-13  Ethan A Merritt  <merritt@u.washington.edu>

	* term/PostScript/prologue.ps term/post.trm:
	Handle transparent fill patterns in PS_fillbox() in the same way
	as is already done in PS_filled_polygon().
	Bug #3567035

	* src/eval.c (fill_gpval_axis) src/axis.h: The RANGE_REVERSE flag no
	longer exists, so do not report it to the user and do not swap axis
	min/max values when storing them for later mousing calculations by the
	canvas, svg, and other terminals.

	* src/datafile.c: Remove unused variables.

	* demo/html:  Update online demo collection to include linked axes
	and RGBA color applied to individual lines. 

2012-09-12  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff man/gnuplot-ja.1:
	Sync with English documentation (rev.1.746).

2012-09-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c:  Index histogram stacks using the point's index rather
	than its x coordinate. Fixes rowstacked histogram array overflow.
	Bug #3566662

2012-09-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tabulate.c:  Output a column for variable color if it is used 
	in the plot command.

2012-09-04  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/emf.trm:  Revise the object-handling code so that the current
	brush or pen is deselected before being deleted and recreated.
	Defer application of new dash+color line properties until needed for a
	new line segment.

2012-09-04  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm: Seek to the beginning of the output file after plotting.